# fakeenv

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: dirs_store.rs  lib.rs
