[package]
name = "fakeenv"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
fake = []
__doc_cfg = []

[package.metadata.docs.rs]
features = ["fake", "__doc_cfg"]
